--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <html>
 
 <head>
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400|Raleway:100,200&amp;subset=cyrillic" rel="stylesheet">
 <style>
 	body{
 		margin: 0px;
+}
+
+	div.buttons:hover {
+		background: #404040;
+		bottom: 0px;
 }
 
 	div.buttons img {
@@ -13,17 +19,35 @@
 	div.buttons {
 		width: 100%;
 		position: fixed;
-		bottom: 0;
+		bottom: -30px;
 		background: rgba(0, 0, 0, 0.2);
 		text-align: center;
 		padding-top: 5px;
+		transition: background 3s, bottom 1s;
 }
 
 	div.buttons a {
 		display: inline-block;
 		margin: 0 5px 0 5px;
 }
+	div.header {
+		/*blog name
+		border-top: 5px solid black;
+		border-bottom: 5px solid black;*/
+		padding: 30px;
+		text-align: center;
+		font-size: 64px;
+		font-family: 'Raleway', sans-serif;
+		font-weight: 100;
+		color: #FFF9F5;
+		
+}
+	div.header {
+		/*menu*/
+		background: #404040;
+		min-height: 292px;
 
+}
 </style>
 </head>
 
@@ -32,9 +56,11 @@
 	<div class="buttons">
 		<a target="_blank" href="https://vk.com/playpurplepiano"><img src="http://geological.narod.ru/FON/002vk.gif"></a>
 		<a target="_blank" href="https://twitter.com/playpurplepiano"><img src="http://icon-icons.com/icons2/642/PNG/512/twitter_2_icon-icons.com_59206.png"></a>
-		<a target="_blank" href="https://www.instagram.com/playpurplepiano/"><img src="https://objects.airfrance.com/FR/common/common/img/tab1st/social/picto_instagram_login.svg"></a>
+		<a target="_blank" href="https://www.instagram.com/playpurplepiano/"><img src="https://cdn0.iconfinder.com/data/icons/social-media-circle-6/1024/instagram-512.png"></a>
 	</div>
-
+	<div class="header">
+		READ UP
+	</div>
 </body>
 
 </html>
