--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+<meta charset='UTF-8'>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400|Raleway:100,200&amp;subset=cyrillic" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="проба цсс.css">
