добавила яндекс.метрику

--- a/index.html
+++ b/index.html
@@ -8,6 +8,36 @@
 </head>
 
 <body>
+
+	<!-- Yandex.Metrika counter -->
+	<script type="text/javascript" >
+		(function (d, w, c) {
+			(w[c] = w[c] || []).push(function() {
+				try {
+					w.yaCounter46124958 = new Ya.Metrika({
+						id:46124958,
+						clickmap:true,
+						trackLinks:true,
+						accurateTrackBounce:true
+					});
+				} catch(e) { }
+			});
+
+			var n = d.getElementsByTagName("script")[0],
+				s = d.createElement("script"),
+				f = function () { n.parentNode.insertBefore(s, n); };
+			s.type = "text/javascript";
+			s.async = true;
+			s.src = "https://mc.yandex.ru/metrika/watch.js";
+
+			if (w.opera == "[object Opera]") {
+				d.addEventListener("DOMContentLoaded", f, false);
+			} else { f(); }
+		})(document, window, "yandex_metrika_callbacks");
+	</script>
+	<noscript><div><img src="https://mc.yandex.ru/watch/46124958" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+	<!-- /Yandex.Metrika counter -->
+
 	<div class="footer">
 		<a target="_blank" href="https://vk.com/playpurplepiano"><img src="http://geological.narod.ru/FON/002vk.gif"></a>
 		<a target="_blank" href="https://twitter.com/playpurplepiano"><img src="http://icon-icons.com/icons2/642/PNG/512/twitter_2_icon-icons.com_59206.png"></a>
