--- a/index.html
+++ b/index.html
@@ -174,6 +174,24 @@
 
 <script src="проба скрипты.js"></script>
 
+	<form target="blank" method="POST" action="https://money.yandex.ru/quickpay/confirm.xml"> 
+		<input type="hidden" name="receiver" value="410015637990716"> 
+		<input type="hidden" name="formcomment" value="Read Up: поддержать"> 
+		<input type="hidden" name="short-dest" value="Read Up: поддержать"> 
+		<input type="hidden" name="label" value="$order_id"> 
+		<input type="hidden" name="quickpay-form" value="donate"> 
+		<input type="hidden" name="targets" value="поддержка ресурса"> 
+		<input type="hidden" name="sum" value="149.00" data-type="number"> 
+		<input type="hidden" name="comment" value="Хотелось бы дистанционного управления."> 
+		<input type="hidden" name="need-fio" value="false"> 
+		<input type="hidden" name="need-email" value="false"> 
+		<input type="hidden" name="need-phone" value="false"> 
+		<input type="hidden" name="need-address" value="false"> 
+		<input type="hidden" name="paymentType" value="AC">
+		<input class="crowdsource button" type="submit" value="support"> 
+	</form>
+
+
 </body>
 
 </html>
