больше рефакторинга! теперь скрипты ещё меньше и  красивее (как я)

--- a/index.html
+++ b/index.html
@@ -53,16 +53,16 @@
 		</div>
 
 		<div class='menu'>
-			<div class='feminism item'>
+			<div class='feminism item' data-posts-to-show='feminism'>
 				feminism
 			</div>
-			<div class='science item'>
+			<div class='science item' data-posts-to-show='science'>
 				science
 			</div>
-			<div class='memes item'>
+			<div class='memes item' data-posts-to-show='memes'>
 				memes
 			</div>
-			<div class='personal item'>
+			<div class='personal item' data-posts-to-show='personal'>
 				personal
 			</div>
 		</div>
