переименовала наконец файлы по науке. отныне всё прилично.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset='UTF-8'>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400|Raleway:100,200&amp;subset=cyrillic" rel="stylesheet">
-<link rel="stylesheet" type="text/css" href="проба цсс.css">
+<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
@@ -172,7 +172,7 @@
 		</p>
 	</div>
 
-<script src="проба скрипты.js"></script>
+<script src="scripts.js"></script>
 
 	<form target="blank" method="POST" action="https://money.yandex.ru/quickpay/confirm.xml"> 
 		<input type="hidden" name="receiver" value="410015637990716"> 
