из цсс сделала лесс, из лесса - более красивый цсс + отрефакторила кнопку доната

--- a/index.html
+++ b/index.html
@@ -45,9 +45,7 @@
 	</div>
 
 	<div class="header">
-		<div class="button">
-			post
-		</div>
+	
 		<div class='blogname'> 
 			READ UP
 		</div>
@@ -187,7 +185,7 @@
 		<input type="hidden" name="need-phone" value="false"> 
 		<input type="hidden" name="need-address" value="false"> 
 		<input type="hidden" name="paymentType" value="AC">
-		<input class="crowdsource button" type="submit" value="support"> 
+		<input class="button" type="submit" value="support"> 
 	</form>
 
 
